// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert Dismissible should render a dismissible icon button with the warning variant 1`] = `
.emotion-1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: rgba(0,0,0,0);
  border: 0;
  border-color: var(--colors-neutral08);
  border-radius: 100%;
  color: var(--colors-neutral08);
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font-family: var(--bodyFont);
  font-size: var(--typeScale-size03-fontSize);
  font-weight: 600;
  height: var(--spaceScale-spacing09);
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  line-height: var(--typeScale-size03-lineHeight);
  margin: var(--spaceScale-spacing02);
  min-width: var(--spaceScale-spacing13);
  overflow: hidden;
  padding: var(--spaceScale.-spacing04) var(--spaceScale.-spacing05);
  position: relative;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  touch-action: manipulation;
  -webkit-transition: background 0.35s,border-color 0.35s,box-shadow 0.35s,color 0.35s;
  transition: background 0.35s,border-color 0.35s,box-shadow 0.35s,color 0.35s;
  vertical-align: middle;
  white-space: nowrap;
  width: var(--spaceScale-spacing09);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  line-height: 1;
  min-width: 0;
  padding: 0;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  border-radius: 0 var(--borderRadius);
}

.emotion-1:not(:disabled):focus {
  outline: 2px dotted var(--colors-focusInverse);
  outline-offset: 3px;
}

.emotion-1:not(:disabled):hover,
.emotion-1:not(:disabled):focus {
  background: rgba(0, 0, 0, 0.3);
  color: var(--colors-neutral08);
}

.emotion-1:not(:disabled):after {
  background: var(--colors-neutral08);
  border-radius: 50%;
  content: '';
  height: var(--spaceScale-spacing07);
  left: 50%;
  opacity: 0;
  padding: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%, -50%) scale(1);
  -moz-transform: translate(-50%, -50%) scale(1);
  -ms-transform: translate(-50%, -50%) scale(1);
  transform: translate(-50%, -50%) scale(1);
  -webkit-transition: opacity 1s,-webkit-transform 0.5s;
  transition: opacity 1s,transform 0.5s;
  width: var(--spaceScale-spacing07);
}

.emotion-1:not(:disabled):active {
  background: rgba(0, 0, 0, 0.5);
  color: var(--colors-neutral08);
}

.emotion-1:not(:disabled):active:after {
  opacity: 0.4;
  -webkit-transform: translate(-50%, -50%) scale(0);
  -moz-transform: translate(-50%, -50%) scale(0);
  -ms-transform: translate(-50%, -50%) scale(0);
  transform: translate(-50%, -50%) scale(0);
  -webkit-transition: -webkit-transform 0s;
  transition: transform 0s;
}

.emotion-1 svg {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-3 {
  visibility: visible;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: rgba(0,0,0,0);
  border: 0;
  border-color: var(--colors-neutral08);
  border-radius: 100%;
  color: var(--colors-neutral08);
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font-family: var(--bodyFont);
  font-size: var(--typeScale-size03-fontSize);
  font-weight: 600;
  height: var(--spaceScale-spacing09);
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  line-height: var(--typeScale-size03-lineHeight);
  margin: var(--spaceScale-spacing02);
  min-width: var(--spaceScale-spacing13);
  overflow: hidden;
  padding: var(--spaceScale.-spacing04) var(--spaceScale.-spacing05);
  position: relative;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  touch-action: manipulation;
  -webkit-transition: background 0.35s,border-color 0.35s,box-shadow 0.35s,color 0.35s;
  transition: background 0.35s,border-color 0.35s,box-shadow 0.35s,color 0.35s;
  vertical-align: middle;
  white-space: nowrap;
  width: var(--spaceScale-spacing09);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  line-height: 1;
  min-width: 0;
  padding: 0;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  border-radius: 0 var(--borderRadius);
}

.emotion-1:not(:disabled):focus {
  outline: 2px dotted var(--colors-focusInverse);
  outline-offset: 3px;
}

.emotion-1:not(:disabled):hover,
.emotion-1:not(:disabled):focus {
  background: rgba(0, 0, 0, 0.3);
  color: var(--colors-neutral08);
}

.emotion-1:not(:disabled):after {
  background: var(--colors-neutral08);
  border-radius: 50%;
  content: '';
  height: var(--spaceScale-spacing07);
  left: 50%;
  opacity: 0;
  padding: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%, -50%) scale(1);
  -moz-transform: translate(-50%, -50%) scale(1);
  -ms-transform: translate(-50%, -50%) scale(1);
  transform: translate(-50%, -50%) scale(1);
  -webkit-transition: opacity 1s,-webkit-transform 0.5s;
  transition: opacity 1s,transform 0.5s;
  width: var(--spaceScale-spacing07);
}

.emotion-1:not(:disabled):active {
  background: rgba(0, 0, 0, 0.5);
  color: var(--colors-neutral08);
}

.emotion-1:not(:disabled):active:after {
  opacity: 0.4;
  -webkit-transform: translate(-50%, -50%) scale(0);
  -moz-transform: translate(-50%, -50%) scale(0);
  -ms-transform: translate(-50%, -50%) scale(0);
  transform: translate(-50%, -50%) scale(0);
  -webkit-transition: -webkit-transform 0s;
  transition: transform 0s;
}

.emotion-1 svg {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-3 {
  visibility: visible;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<button
  aria-label="Close this message"
  class="emotion-0 emotion-1 emotion-2"
  color="primary"
  id="ignoreButton"
  shape="round"
  type="button"
>
  <span
    aria-labelledby="ignoreButton"
    class="emotion-3 emotion-4"
    id="ignoreSvg"
  >
    <svg
      class="icon"
      fill="currentColor"
      height="20"
      id="ignoreTitle"
      viewBox="0 0 24 24"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M18.3 5.71a.9959.9959 0 00-1.41 0L12 10.59 7.11 5.7a.9959.9959 0 00-1.41 0c-.39.39-.39 1.02 0 1.41L10.59 12 5.7 16.89c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L12 13.41l4.89 4.89c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"
        fill-rule="evenodd"
      />
    </svg>
  </span>
</button>
`;

exports[`Alert Variants should render an alert with danger variant 1`] = `
.emotion-0 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-animation: fadein 500ms;
  animation: fadein 500ms;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  font-size: var(--typeScale-size03-fontSize);
  line-height: var(--typeScale-size03-lineHeight);
  margin-bottom: var(--spaceScale-spacing06);
  max-width: 100%;
  padding: 0;
  position: relative;
}

@media (max-width: var(--breakpoints-small)) {
  .emotion-0 {
    font-size: var(--typeScale-size02-fontSize);
    line-height: var(--typeScale-size02-lineHeight);
  }
}

.emotion-0:focus {
  outline: 2px dotted var(--colors-focus);
}

.emotion-2 {
  background-color: var(--colors-danger);
  border-radius: var(--borderRadius);
  color: var(--colors-neutral08);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.emotion-4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin-right: 1px;
  padding: 0 var(--spaceScale-spacing03) 0 var(--spaceScale-spacing04);
}

@media (max-width: var(--breakpoints-small)) {
  .emotion-4 {
    display: none;
  }
}

.emotion-6 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding: var(--spaceScale-spacing04) 0;
}

@media (max-width: var(--breakpoints-small)) {
  .emotion-6 {
    padding-left: var(--spaceScale-spacing04);
  }
}

.emotion-0 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-animation: fadein 500ms;
  animation: fadein 500ms;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  font-size: var(--typeScale-size03-fontSize);
  line-height: var(--typeScale-size03-lineHeight);
  margin-bottom: var(--spaceScale-spacing06);
  max-width: 100%;
  padding: 0;
  position: relative;
}

@media (max-width: var(--breakpoints-small)) {
  .emotion-0 {
    font-size: var(--typeScale-size02-fontSize);
    line-height: var(--typeScale-size02-lineHeight);
  }
}

.emotion-0:focus {
  outline: 2px dotted var(--colors-focus);
}

.emotion-2 {
  background-color: var(--colors-danger);
  border-radius: var(--borderRadius);
  color: var(--colors-neutral08);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.emotion-4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin-right: 1px;
  padding: 0 var(--spaceScale-spacing03) 0 var(--spaceScale-spacing04);
}

@media (max-width: var(--breakpoints-small)) {
  .emotion-4 {
    display: none;
  }
}

.emotion-6 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding: var(--spaceScale-spacing04) 0;
}

@media (max-width: var(--breakpoints-small)) {
  .emotion-6 {
    padding-left: var(--spaceScale-spacing04);
  }
}

<div>
  <div
    class="emotion-0 emotion-1"
    id="auto-generated-id"
    tabindex="-1"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <span
        class="emotion-4 emotion-5"
      >
        <svg
          class="icon"
          fill="currentColor"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 11c-.55 0-1-.45-1-1V8c0-.55.45-1 1-1s1 .45 1 1v4c0 .55-.45 1-1 1zm1 4h-2v-2h2v2z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      <div
        class="emotion-6 emotion-7"
      >
        Test Alert Text
      </div>
    </div>
  </div>
</div>
`;

exports[`Alert Variants should render an alert with info variant 1`] = `
.emotion-0 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-animation: fadein 500ms;
  animation: fadein 500ms;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  font-size: var(--typeScale-size03-fontSize);
  line-height: var(--typeScale-size03-lineHeight);
  margin-bottom: var(--spaceScale-spacing06);
  max-width: 100%;
  padding: 0;
  position: relative;
}

@media (max-width: var(--breakpoints-small)) {
  .emotion-0 {
    font-size: var(--typeScale-size02-fontSize);
    line-height: var(--typeScale-size02-lineHeight);
  }
}

.emotion-0:focus {
  outline: 2px dotted var(--colors-focus);
}

.emotion-2 {
  background-color: var(--colors-neutral);
  border-radius: var(--borderRadius);
  color: var(--colors-neutral08);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.emotion-4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin-right: 1px;
  padding: 0 var(--spaceScale-spacing03) 0 var(--spaceScale-spacing04);
}

@media (max-width: var(--breakpoints-small)) {
  .emotion-4 {
    display: none;
  }
}

.emotion-6 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding: var(--spaceScale-spacing04) 0;
}

@media (max-width: var(--breakpoints-small)) {
  .emotion-6 {
    padding-left: var(--spaceScale-spacing04);
  }
}

.emotion-0 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-animation: fadein 500ms;
  animation: fadein 500ms;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  font-size: var(--typeScale-size03-fontSize);
  line-height: var(--typeScale-size03-lineHeight);
  margin-bottom: var(--spaceScale-spacing06);
  max-width: 100%;
  padding: 0;
  position: relative;
}

@media (max-width: var(--breakpoints-small)) {
  .emotion-0 {
    font-size: var(--typeScale-size02-fontSize);
    line-height: var(--typeScale-size02-lineHeight);
  }
}

.emotion-0:focus {
  outline: 2px dotted var(--colors-focus);
}

.emotion-2 {
  background-color: var(--colors-neutral);
  border-radius: var(--borderRadius);
  color: var(--colors-neutral08);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.emotion-4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin-right: 1px;
  padding: 0 var(--spaceScale-spacing03) 0 var(--spaceScale-spacing04);
}

@media (max-width: var(--breakpoints-small)) {
  .emotion-4 {
    display: none;
  }
}

.emotion-6 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding: var(--spaceScale-spacing04) 0;
}

@media (max-width: var(--breakpoints-small)) {
  .emotion-6 {
    padding-left: var(--spaceScale-spacing04);
  }
}

<div>
  <div
    class="emotion-0 emotion-1"
    id="auto-generated-id"
    tabindex="-1"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <span
        class="emotion-4 emotion-5"
      >
        <svg
          class="icon"
          fill="currentColor"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 15c-.55 0-1-.45-1-1v-4c0-.55.45-1 1-1s1 .45 1 1v4c0 .55-.45 1-1 1zm1-8h-2V7h2v2z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      <div
        class="emotion-6 emotion-7"
      >
        Test Alert Text
      </div>
    </div>
  </div>
</div>
`;

exports[`Alert Variants should render an alert with warning variant 1`] = `
.emotion-0 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-animation: fadein 500ms;
  animation: fadein 500ms;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  font-size: var(--typeScale-size03-fontSize);
  line-height: var(--typeScale-size03-lineHeight);
  margin-bottom: var(--spaceScale-spacing06);
  max-width: 100%;
  padding: 0;
  position: relative;
}

@media (max-width: var(--breakpoints-small)) {
  .emotion-0 {
    font-size: var(--typeScale-size02-fontSize);
    line-height: var(--typeScale-size02-lineHeight);
  }
}

.emotion-0:focus {
  outline: 2px dotted var(--colors-focus);
}

.emotion-2 {
  background-color: var(--colors-pop04);
  border-radius: var(--borderRadius);
  color: var(--colors-neutral);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.emotion-4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin-right: 1px;
  padding: 0 var(--spaceScale-spacing03) 0 var(--spaceScale-spacing04);
}

@media (max-width: var(--breakpoints-small)) {
  .emotion-4 {
    display: none;
  }
}

.emotion-6 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding: var(--spaceScale-spacing04) 0;
}

@media (max-width: var(--breakpoints-small)) {
  .emotion-6 {
    padding-left: var(--spaceScale-spacing04);
  }
}

.emotion-0 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-animation: fadein 500ms;
  animation: fadein 500ms;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  font-size: var(--typeScale-size03-fontSize);
  line-height: var(--typeScale-size03-lineHeight);
  margin-bottom: var(--spaceScale-spacing06);
  max-width: 100%;
  padding: 0;
  position: relative;
}

@media (max-width: var(--breakpoints-small)) {
  .emotion-0 {
    font-size: var(--typeScale-size02-fontSize);
    line-height: var(--typeScale-size02-lineHeight);
  }
}

.emotion-0:focus {
  outline: 2px dotted var(--colors-focus);
}

.emotion-2 {
  background-color: var(--colors-pop04);
  border-radius: var(--borderRadius);
  color: var(--colors-neutral);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.emotion-4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin-right: 1px;
  padding: 0 var(--spaceScale-spacing03) 0 var(--spaceScale-spacing04);
}

@media (max-width: var(--breakpoints-small)) {
  .emotion-4 {
    display: none;
  }
}

.emotion-6 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding: var(--spaceScale-spacing04) 0;
}

@media (max-width: var(--breakpoints-small)) {
  .emotion-6 {
    padding-left: var(--spaceScale-spacing04);
  }
}

<div>
  <div
    class="emotion-0 emotion-1"
    id="auto-generated-id"
    tabindex="-1"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <span
        class="emotion-4 emotion-5"
      >
        <svg
          class="icon"
          fill="currentColor"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4.47 21h15.06c1.54 0 2.5-1.67 1.73-3L13.73 4.99c-.77-1.33-2.69-1.33-3.46 0L2.74 18c-.77 1.33.19 3 1.73 3zM12 14c-.55 0-1-.45-1-1v-2c0-.55.45-1 1-1s1 .45 1 1v2c0 .55-.45 1-1 1zm1 4h-2v-2h2v2z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      <div
        class="emotion-6 emotion-7"
      >
        Test Alert Text
      </div>
    </div>
  </div>
</div>
`;

exports[`Alert should render an alert with default variant 1`] = `
.emotion-0 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-animation: fadein 500ms;
  animation: fadein 500ms;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  font-size: var(--typeScale-size03-fontSize);
  line-height: var(--typeScale-size03-lineHeight);
  margin-bottom: var(--spaceScale-spacing06);
  max-width: 100%;
  padding: 0;
  position: relative;
}

@media (max-width: var(--breakpoints-small)) {
  .emotion-0 {
    font-size: var(--typeScale-size02-fontSize);
    line-height: var(--typeScale-size02-lineHeight);
  }
}

.emotion-0:focus {
  outline: 2px dotted var(--colors-focus);
}

.emotion-2 {
  background-color: var(--colors-neutral);
  border-radius: var(--borderRadius);
  color: var(--colors-neutral08);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.emotion-4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin-right: 1px;
  padding: 0 var(--spaceScale-spacing03) 0 var(--spaceScale-spacing04);
}

@media (max-width: var(--breakpoints-small)) {
  .emotion-4 {
    display: none;
  }
}

.emotion-6 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding: var(--spaceScale-spacing04) 0;
}

@media (max-width: var(--breakpoints-small)) {
  .emotion-6 {
    padding-left: var(--spaceScale-spacing04);
  }
}

.emotion-0 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-animation: fadein 500ms;
  animation: fadein 500ms;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  font-size: var(--typeScale-size03-fontSize);
  line-height: var(--typeScale-size03-lineHeight);
  margin-bottom: var(--spaceScale-spacing06);
  max-width: 100%;
  padding: 0;
  position: relative;
}

@media (max-width: var(--breakpoints-small)) {
  .emotion-0 {
    font-size: var(--typeScale-size02-fontSize);
    line-height: var(--typeScale-size02-lineHeight);
  }
}

.emotion-0:focus {
  outline: 2px dotted var(--colors-focus);
}

.emotion-2 {
  background-color: var(--colors-neutral);
  border-radius: var(--borderRadius);
  color: var(--colors-neutral08);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.emotion-4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin-right: 1px;
  padding: 0 var(--spaceScale-spacing03) 0 var(--spaceScale-spacing04);
}

@media (max-width: var(--breakpoints-small)) {
  .emotion-4 {
    display: none;
  }
}

.emotion-6 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding: var(--spaceScale-spacing04) 0;
}

@media (max-width: var(--breakpoints-small)) {
  .emotion-6 {
    padding-left: var(--spaceScale-spacing04);
  }
}

<div>
  <div
    class="emotion-0 emotion-1"
    id="defaultVariant"
    tabindex="-1"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <span
        class="emotion-4 emotion-5"
      >
        <svg
          class="icon"
          fill="currentColor"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 15c-.55 0-1-.45-1-1v-4c0-.55.45-1 1-1s1 .45 1 1v4c0 .55-.45 1-1 1zm1-8h-2V7h2v2z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      <div
        class="emotion-6 emotion-7"
      >
        Test Alert Text
      </div>
    </div>
  </div>
</div>
`;
